# gapopa_interview

./: .gitignore  .rustfmt.toml  Cargo.toml  readme.md
domain/: Cargo.toml
domain/src/: lib.rs  request.rs
domain/src/value_objects/: interval_duration.rs  mod.rs  site_name.rs
src/: main.rs
usecase/: Cargo.toml
usecase/src/: lib.rs
